deploy: lburleigh/da-guide@cd73efc3b2048ef5359650fc6db763ac10a2d45b

--- a/01-da_info/coir_ls.html
+++ b/01-da_info/coir_ls.html
@@ -405,6 +405,8 @@ document.write(`
 <li><p>alpha (<span class="math notranslate nohighlight">\(\alpha\)</span>), which controls the constraint of coefficients</p></li>
 </ul>
 <p>Optimal hyper-parameters can be found using leave-one-domain-out cross validation on source domain data.</p>
+<p><img alt="CoIR Algorithm" src="../_images/CoIRalgBland.PNG" /></p>
+<p><b>Fig. 4 - The CoIR algorithm uses the regularized least squares classifier, a linear model which has 3 goals to minimize penalty.</b></p>
 </section>
 </section>
 
